UserServiceTest class implementation